# sportsdata

./: LICENSE  README.md  exemple_annotation_ligne_5_cycles.csv  pyproject.toml
models/catalogs/boxing/: field-presets.json
models/catalogs/common/: annotation-events.json  media-types.json  reference-corners.json  sexes.json  sides.json  sports.json
models/catalogs/speed-climbing/: field-presets.json
models/catalogs/swimming/: annotation-events.json  distances.json  distances.overrides.json  field-presets.json  pool-presets.json  rounds.json  strokes.json
models/catalogs/table-tennis/: annotation-events.json  clip-patterns.json
models/derivations/swimming/: events.recipe.json
models/formats/csv/: annotation.table-schema.json  common-minimal-tracking.table-schema.json  swimflow.table-schema.json  swimming-basic-tracking.table-schema.json  swimming-tracking.table-schema.json  table-tennis-basic-tracking.table-schema.json
models/formats/json/: common-minimal-tracking-metadata.format.json  swimflow-metadata.format.json  swimflow.format.json  swimming-event-config.format.json  (+2 more)
python/sportsdata/: __init__.py  catalogs.py  derivations.py  metadata.py
python/sportsdata_models/: __init__.py  catalogs.py  derivations.py  metadata.py  version.py
sportsdata/: __init__.py
sportsdata_models/: __init__.py
tests/: test_catalogs.py  test_cli.py  test_csv_tracking_validation.py  test_derivations.py  test_metadata_distances.py  test_swimming_event_config.py  test_table_tennis_game.py  test_table_tennis_manifest.py
web/src/: catalogs.ts  metadata.ts  schemas.ts
(+47 files in other folders)
