[project]
name = "sportsdata"
version = "0.1.0"
description = "Shared catalogs, schemas, derivations, and validators for sports data files."
requires-python = ">=3.10"

[project.scripts]
sportsdata-validate = "sportsdata.validators.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]
